syntax="proto3";

package auth_service;
option go_package="genproto/auth_service";


service ApiKeyUsageService {
  rpc Get (GetApiKeyUsageReq) returns (ApiKeyUsage) {}
  rpc CheckAndUpsertLimit (CheckLimitRequest) returns (CheckLimitResponse) {}
}

message ApiKeyUsage {
  string api_key = 1;
  string created_at = 2;
  int32 request_count = 3;
}

message GetApiKeyUsageReq {
  string api_key = 1;
}

message CheckLimitRequest {
  string api_key = 1;
}

message CheckLimitResponse {
  bool is_limit_reached = 1;
  int32 request_count = 2;
  int32 limit = 3;
}

